# Syspro_2020_Part3

Client/: CMakeLists.txt  Makefile  queries
Client/Argument_Data/: Argument_Data.cpp  Argument_Data.h
Client/Argument_Manager/: Argument_Manager.cpp  Argument_Manager.h
Client/Client_Socket/: Client_Socket.cpp  Client_Socket.h
Client/Client_Thread/: Client_Thread.cpp  Client_Thread.h
Client/Socket_IO_Handler/: Socket_IO_Handler.cpp  Socket_IO_Handler.h
Client/Thread_Data/: Shared_Data.h  Thread_Data.cpp  Thread_Data.h
Client/Thread_Manager/: Thread_Manager.cpp  Thread_Manager.h
Client/Thread_Wrapper/: Thread_Wrapper.h
Client/main/: main.cpp
Master/: CMakeLists.txt  makefile
Master/AVL_Tree/: AVL_Tree.cpp  AVL_Tree.h  AVL_Tree_Node.cpp  AVL_Tree_Node.h
Master/Argument_Data/: Argument_Data.cpp  Argument_Data.h
Master/Argument_Manager/: Argument_Manager.cpp  Argument_Manager.h
Master/Date/: Date.cpp  Date.h
Master/Hash_Table/: Hash_Bucket_Node.cpp  Hash_Bucket_Node.h  Hash_Table.cpp  Hash_Table.h
Master/Initializer/: Initializer.cpp  Initializer.h
Master/Max_Heap/: Max_Heap.cpp  Max_Heap.h  Max_heap_node.cpp  Max_heap_node.h
Master/Named_Pipe/: Named_Pipe.cpp  Named_Pipe.h
Master/Parent/: Parent.cpp  Parent.h
Master/Patient_Record/: Patient_Record.cpp  Patient_Record.h
Master/Patients_List/: Patients_List.cpp  Patients_List.h
Master/Pipe_IO_Handler/: Pipe_IO_Handler.cpp  Pipe_IO_Handler.h
Master/Preparator/: Preparator.cpp  Preparator.h
Master/Query_Socket/: Query_Socket.cpp  (+1 more)
Server/: CMakeLists.txt  makefile  whoServer
(+79 files in other folders)
